--- a/c.algo.part1-4/03-elementary_data_structures/3.01-building_blocks/examples/prog_3.3--3.4-point_data/Makefile
+++ b/c.algo.part1-4/03-elementary_data_structures/3.01-building_blocks/examples/prog_3.3--3.4-point_data/Makefile
@@ -1,26 +1,20 @@
-# compiler
+
+RM = rm -f
 CC = gcc
-# flags
-CFLAGS = -Wall -g
-# general dependencies
-DEPS = Point.h
-# object files
-OBJ = point.o point_dt_implementation.o
-# main file name
-TARGET = point
-# out file name
-OUT = out
-# standard
-STD = -std=c99
+CFLAGS = -Wall -g -DNDEBUG -std=c99
+INCLUDES = 
+LDFLAGS = -lm
+LDPATH =
+VPATH = 
 
+SOURCES = $(shell ls *.c)
+PROGS = out
 
-all : $(TARGET) 
+all: $(PROGS)
+	@echo "PROGS = $(PROGS)" 
 
-$(TARGET): $(OBJ)
-	gcc $(CFLAGS) $(STD) -o $(OUT) $(OBJ) -lm
-
-$(OBJ): $(DEPS)
-
-.PHONY : clean
 clean:
-	rm -rf $(wildcard *.o) $(OUT)
+	$(RM) $(PROGS)
+
+$(PROGS): $(SOURCES) $(LIB_SOURCES)
+	$(CC) -o $@ $(CFLAGS) $(INCLUDES) $^ $(LDFLAGS) $(LDPATH)
